swiftyPOPL/test/should_fail/variable_out_of_scope.swift
func f() -> Int {
    let b: Bool = true
    if b {
        let x: Int = 1
        x
    } else {
        x
    }
}